--- a/style.css
+++ b/style.css
@@ -213,3 +213,83 @@ a{
 .container{
     padding: 10% 4%;
 }
+
+section.quem-somos{
+    /* background-color: #023E5A;  */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%; 
+    height: 500px; 
+    
+}
+.quem-somos h2{
+    display: flex;  
+    justify-content:center;
+    margin-right: 750px;
+ 
+}
+.card-conteiner{
+    display: flex;
+    gap: 10%;
+    width: 70%;
+    margin-left: 150px;
+    justify-content: space-between;
+   
+}
+.cards{
+    border: 4px solid #023E5A;
+    border-radius: 14px;
+    font-size: 1rem;
+    text-wrap: wrap;
+    padding: 0 30px;
+    padding-top: 10px;
+     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75); 
+}
+
+
+.nossosservicos h2{
+    display: flex;
+    justify-content:center;
+    margin-right: 750px;
+}
+.card-conteiner2{
+    display: flex;
+    gap: 10%;
+    width: 70%;
+    margin-left: 150px;
+    justify-content: space-between;
+}
+.cards2{
+    border: 4px solid #023E5A;
+    border-radius: 14px;
+    font-size: 1rem;
+    text-wrap: wrap;
+    padding: 0 30px;
+    padding-top: 10px;
+     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75); 
+}
+.parceiros{
+    margin-top: 80px;
+}
+.parceiros-conteiner{
+    margin-top: 20px;
+    display: flex;
+    margin-left: 100px;
+
+}
+.logos-parceiros img{
+    width: 50%;
+
+}
+
+.parceiros h2{
+    display: flex;
+    justify-content:center;
+    margin-right: 750px;
+
+}
