--- a/style.css
+++ b/style.css
@@ -220,13 +220,15 @@ section.quem-somos{
     flex-direction: column;
     justify-content: center;
     width: 100%; 
-    height: 500px; 
+    height: 600px; 
     
 }
 .quem-somos h2{
+    color: #fff;
     display: flex;  
     justify-content:center;
     margin-right: 750px;
+    margin-bottom: 30px;
  
 }
 .card-conteiner{
@@ -238,7 +240,8 @@ section.quem-somos{
    
 }
 .cards{
-    border: 4px solid #023E5A;
+    background-color: #faf6f6;
+    border: 4px solid #5e5e5e;
     border-radius: 14px;
     font-size: 1rem;
     text-wrap: wrap;
@@ -251,9 +254,12 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 
 
 .nossosservicos h2{
+    color: white;
     display: flex;
     justify-content:center;
-    margin-right: 750px;
+    padding: 40px;
+    margin-right: 730px;
+    /*margin-top: 40px; */
 }
 .card-conteiner2{
     display: flex;
@@ -263,7 +269,8 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     justify-content: space-between;
 }
 .cards2{
-    border: 4px solid #023E5A;
+    background-color: #faf6f6;
+    border: 4px solid #5e5e5e;
     border-radius: 14px;
     font-size: 1rem;
     text-wrap: wrap;
@@ -290,6 +297,40 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 .parceiros h2{
     display: flex;
     justify-content:center;
-    margin-right: 750px;
+    margin-right: 830px;
+   padding: 40px;
 
+}
+.quem-somos{
+    color: black;
+    margin-top: 80px;
+    background-color: rgba(2, 62, 90, 0.74);
+    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+}
+
+.nossosservicos{
+    color: black;
+    height: 400px;
+    margin-top: 80px;
+    background-color: rgba(2, 62, 90, 0.74);
+    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+}
+
+.card-conteiner2{
+    margin-top: 20px;
+}
+.parceiros{
+    margin-top: 80px;
+    background-color: rgba(2, 62, 90, 0.74);
+    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+}
+.parceiros h2{
+    color: white;
+    
 }
