--- a/style.css
+++ b/style.css
@@ -114,9 +114,9 @@ a{
     width: 100%;
     height: 32rem;
     background-size: cover;
-    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    /* -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
     -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1); */
 
 }
 
@@ -191,7 +191,6 @@ a{
     -webkit-box-shadow: 4px 5px 15px -1px rgba(115,49,122,1);
     -moz-box-shadow: 4px 5px 15px -1px rgba(115,49,122,1);
     box-shadow: 4px 5px 15px -1px rgba(115,49,122,1);
-    
 }
 
 .inta_but:hover{
@@ -305,9 +304,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     color: black;
     margin-top: 80px;
     background-color: rgba(2, 62, 90, 0.74);
-    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+    
 }
 
 .nossosservicos{
@@ -315,9 +312,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     height: 400px;
     margin-top: 80px;
     background-color: rgba(2, 62, 90, 0.74);
-    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+   
 }
 
 .card-conteiner2{
@@ -326,9 +321,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 .parceiros{
     margin-top: 80px;
     background-color: rgba(2, 62, 90, 0.74);
-    -webkit-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    -moz-box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
-    box-shadow: 0px 4px 17px 3px rgba(72,120,168,1);
+   
 }
 .parceiros h2{
     color: white;
